[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vita-tools"
version = "0.1.0"
description = "Computer vision toolkit for 3D point cloud processing and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DylanLi", email = "dylan.h.li@outlook.com"},
]
keywords = ["computer-vision", "3d", "point-cloud", "visualization", "depth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "lmdb>=1.6.2",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "open3d>=0.17.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DylanLIiii/vita-agent"
Repository = "https://github.com/DylanLIiii/vita-agent"
Issues = "https://github.com/DylanLIiii/vita-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["vita_toolkit"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
